--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
     "sourceMap": true,
-    "outDir": "dist",
-    "baseUrl": "src",
-    "rootDir": "src",
+    "outDir": "./dist",
+    "baseUrl": "./src",
+    "rootDir": "./src",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
